--- a/src/components/ProjectOverview.css
+++ b/src/components/ProjectOverview.css
@@ -125,7 +125,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 25px 0;
+  margin-top: 16px;
+  padding: 0 25px;
 }
 
 .po-carousel-dots {
